align-items fix

--- a/src/css/covers.css
+++ b/src/css/covers.css
@@ -29,7 +29,7 @@
   max-height: 508px;
   overflow: hidden;
   display: flex;
-  align-items: anchor-center;
+  align-items: center;
 }
 .container-covers {
   display: flex;
